--- a/MVVM/Views/ShellView.xaml
+++ b/MVVM/Views/ShellView.xaml
@@ -7,6 +7,6 @@
         mc:Ignorable="d"
         Title="ShellView" Height="450" Width="800">
     <Grid>
-        
+        <TextBlock>Hello World!</TextBlock>
     </Grid>
 </Window>
