--- a/Dartin/Dartin.Application/App.xaml
+++ b/Dartin/Dartin.Application/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="MVVM.App"
+﻿<Application x:Class="Dartin.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:MVVM">
+             xmlns:local="clr-namespace:Dartin">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
