--- a/Dartin/Dartin.Application/Views/MatchDefinitionView.xaml
+++ b/Dartin/Dartin.Application/Views/MatchDefinitionView.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="MVVM.Views.MatchDefinitionView"
+﻿<Window x:Class="Dartin.Views.MatchDefinitionView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:MVVM.Views"
+        xmlns:local="clr-namespace:Dartin.Views"
         mc:Ignorable="d"
         Title="MatchDefinitionView" Height="450" Width="800">
     <Grid>
