--- a/Dartin/Dartin.Application/Views/MatchDefinitionView.xaml
+++ b/Dartin/Dartin.Application/Views/MatchDefinitionView.xaml
@@ -42,16 +42,16 @@
 
         <ComboBox ItemsSource="{Binding Players, Mode=OneWay}" SelectedItem="{Binding Path=SelectedPlayerOne, Mode=OneWayToSource}" DisplayMemberPath="Name" Grid.Row="1" Grid.Column="0"/>
 
-		<Label x:Uid="Label_1" Content="Versus" Grid.Row="1" Grid.Column="1"/>
+		<Label Content="Versus" Grid.Row="1" Grid.Column="1"/>
         <ComboBox ItemsSource="{Binding Players, Mode=OneWay}" SelectedItem="{Binding Path=SelectedPlayerTwo, Mode=OneWayToSource}" DisplayMemberPath="Name" Grid.Row="1" Grid.Column="2"/>
 
-		<Label x:Uid="Label_0" Content="Sets to win" Grid.Row="2" Grid.Column="0"/>
+		<Label Content="Sets to win" Grid.Row="2" Grid.Column="0"/>
         <TextBox Text="{Binding CurrentObject.SetsToWin, UpdateSourceTrigger=PropertyChanged}" Grid.Row="2" Grid.Column="1"/>
 
-		<Label x:Uid="Label_0" Content="Legs to win set" Grid.Row="3" Grid.Column="0"/>
+		<Label Content="Legs to win set" Grid.Row="3" Grid.Column="0"/>
         <TextBox Text="{Binding CurrentObject.LegsToWinSet, UpdateSourceTrigger=PropertyChanged}" Grid.Row="3" Grid.Column="1"/>
 
-		<Label x:Uid="Label_0" Content="Score to win leg" Grid.Row="4" Grid.Column="0"/>
+		<Label Content="Score to win leg" Grid.Row="4" Grid.Column="0"/>
         <TextBox Text="{Binding CurrentObject.ScoreToWinLeg, UpdateSourceTrigger=PropertyChanged}" Grid.Row="4" Grid.Column="1"/>
 
 		<Button x:Name="Exit" Content="Exit" Grid.Row="5" Grid.Column="0"/>
