--- a/Dartin/Dartin.Application/Views/ShellView.xaml
+++ b/Dartin/Dartin.Application/Views/ShellView.xaml
@@ -7,6 +7,11 @@
         mc:Ignorable="d"
         Title="ShellView" Height="450" Width="800">
     <Grid>
-        <TextBlock>Hello World!</TextBlock>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"></RowDefinition>
+            <RowDefinition Height="*"></RowDefinition>
+        </Grid.RowDefinitions>
+        <ComboBox SelectedIndex="{Binding SelectedViewIndex, Mode=OneWayToSource }" x:Name="ViewModels" DisplayMemberPath="Name" />
+        <ContentControl Grid.Row="1"  x:Name="ActiveItem" ></ContentControl>
     </Grid>
 </Window>
