--- a/Dartin/Dartin.Application/Views/ShellView.xaml
+++ b/Dartin/Dartin.Application/Views/ShellView.xaml
@@ -1,7 +1,8 @@
-﻿<Window x:Class="Dartin.Views.ShellView"
+﻿<mah:MetroWindow x:Class="Dartin.Views.ShellView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:mah="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Dartin.Views"
         mc:Ignorable="d"
@@ -14,4 +15,4 @@
         <ComboBox SelectedIndex="{Binding SelectedViewIndex, Mode=OneWayToSource }" x:Name="ViewModels" DisplayMemberPath="Name" />
         <ContentControl Grid.Row="1"  x:Name="ActiveItem" ></ContentControl>
     </Grid>
-</Window>
+</mah:MetroWindow>
