Complete UI ViewModel

--- a/Dartin/Dartin.Application/Views/ScoreboardView.xaml
+++ b/Dartin/Dartin.Application/Views/ScoreboardView.xaml
@@ -22,10 +22,10 @@
                 <RowDefinition Height="Auto"></RowDefinition>
             </Grid.RowDefinitions>
 
-            <Label Grid.Row="0" Grid.Column="0" Content="{Binding Match.Name}" HorizontalAlignment="Left" Padding="4"></Label>
-            <Label Grid.Row="0" Grid.Column="2" Content="{Binding BestOf}" HorizontalAlignment="Right" Padding="4"></Label>
+            <Label Grid.Row="0" Grid.Column="0" Content="{Binding Match.Name}" HorizontalAlignment="Left" Padding="12" FontSize="16"></Label>
+            <Label Grid.Row="0" Grid.Column="2" Content="{Binding BestOf}" HorizontalAlignment="Right" Padding="12" FontSize="16"></Label>
 
-            <Label Grid.Row="1" Grid.Column="0" Content="{Binding Player1.Name}" HorizontalAlignment="Left" Padding="12"></Label>
+            <Label Grid.Row="1" Grid.Column="0" Content="{Binding Player1.Name}" HorizontalAlignment="Left" Padding="12" FontSize="16"></Label>
             <Grid Grid.Column="1">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"></ColumnDefinition>
@@ -37,15 +37,19 @@
                     <RowDefinition Height="Auto"></RowDefinition>
                 </Grid.RowDefinitions>
 
-                <Label Grid.Row="0" Grid.Column="0" Content="{Binding Player1LegScore}" Padding="3" HorizontalAlignment="Center"></Label>
-                <Label Grid.Row="0" Grid.Column="1" Content=":" Padding="3"></Label>
-                <Label Grid.Row="0" Grid.Column="2" Content="{Binding Player2LegScore}" Padding="3" HorizontalAlignment="Center"></Label>
+                <Label Grid.Row="0" Grid.Column="0" Content="{Binding Player1LegScore}" HorizontalAlignment="Center" Padding="12" FontSize="24" FontWeight="Bold"></Label>
+                <Label Grid.Row="0" Grid.Column="1" Content=":" Padding="12" FontSize="24" FontWeight="Bold"></Label>
+                <Label Grid.Row="0" Grid.Column="2" Content="{Binding Player2LegScore}" HorizontalAlignment="Center" Padding="12" FontSize="24" FontWeight="Bold"></Label>
 
-                <Label Grid.Row="1" Grid.ColumnSpan="3" Grid.Column="0" Content="{Binding CurrentLeg}" HorizontalAlignment="Center"></Label>
+                <Label Grid.Row="1" Grid.ColumnSpan="3" Grid.Column="0" Content="{Binding CurrentLeg, StringFormat='Leg {0}'}" HorizontalAlignment="Center" Padding="12" FontSize="24" FontWeight="Bold"></Label>
             </Grid>
-            <Label Grid.Row="1" Grid.Column="2" Content="{Binding Player2.Name}" HorizontalAlignment="Right" Padding="12"></Label>
+            <Label Grid.Row="1" Grid.Column="2" Content="{Binding Player2.Name}" HorizontalAlignment="Right" Padding="12" FontSize="16"></Label>
 
-            <ListView Grid.Row="2" Grid.ColumnSpan="3" ItemsSource="{Binding Logs}"></ListView>
+            <ListView Grid.Row="2" Grid.ColumnSpan="3" ItemsSource="{Binding Logs}" HorizontalAlignment="Center"></ListView>
+
+            <Button Grid.Row="3" Grid.Column="0" x:Name="Back" Content="Back" Padding="12" Margin="0"></Button>
+            <TextBox Grid.Row="3" Grid.Column="1" Text="{Binding Input}" HorizontalAlignment="Center" Padding="0,12,0,12" Margin="0" Width="128" MaxLength="3" FontSize="20" TextAlignment="Center"></TextBox>
+            <Button Grid.Row="3" Grid.Column="2" x:Name="Submit" Content="Submit" Padding="12" Margin="0"></Button>
             
         </Grid>
     </Border>
