--- a/Dartin/Dartin.Application/Views/ScoreboardView.xaml
+++ b/Dartin/Dartin.Application/Views/ScoreboardView.xaml
@@ -4,6 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Dartin.Views"
+             xmlns:cal="clr-namespace:Caliburn.Micro;assembly=Caliburn.Micro.Platform"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
 
@@ -48,7 +49,7 @@
             <ListView Grid.Row="2" Grid.ColumnSpan="3" ItemsSource="{Binding Logs}" HorizontalAlignment="Center"></ListView>
 
             <Button Grid.Row="3" Grid.Column="0" x:Name="Back" Content="Back" Padding="12" Margin="0"></Button>
-            <TextBox Grid.Row="3" Grid.Column="1" Text="{Binding Input}" HorizontalAlignment="Center" Padding="0,12,0,12" Margin="0" Width="128" MaxLength="3" FontSize="20" TextAlignment="Center"></TextBox>
+            <TextBox Grid.Row="3" Grid.Column="1" Text="{Binding Input}" HorizontalAlignment="Center" Padding="0,12,0,12" Margin="0" Width="128" MaxLength="3" FontSize="20" TextAlignment="Center" cal:Message.Attach="[Event KeyDown] = [Action Submit($eventArgs)]"> </TextBox>
             <Button Grid.Row="3" Grid.Column="2" x:Name="Submit" Content="Submit" Padding="12" Margin="0"></Button>
         </Grid>
     </Border>
