--- a/Dartin/Dartin.Application/Views/ShellView.xaml
+++ b/Dartin/Dartin.Application/Views/ShellView.xaml
@@ -4,7 +4,8 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Dartin.Views"
-        mc:Ignorable="d"
+		xmlns:resources="clr-namespace:Dartin.Properties"
+		mc:Ignorable="d"
         Title="ShellView" Height="450" Width="800">
     <Grid>
         <Grid.RowDefinitions>
@@ -19,7 +20,7 @@
         <Button x:Name="HelpClick" Grid.Row="0" Grid.Column="1" Content="Help"></Button>
         <ContentControl Grid.ColumnSpan="2" Grid.Row="1"  x:Name="ActiveItem" ></ContentControl>
         <Grid Visibility="{Binding IsHelpVisible, Mode=OneWay}" Grid.Row="1" Grid.ColumnSpan="2" Background="Transparent">
-            <TextBlock Foreground="White" Padding="40" Background="Gray">Help text here</TextBlock>
+			<TextBlock Text="{x:Static resources:Resources.HelpText}" Foreground="White" Padding="40" Background="Gray"></TextBlock>
         </Grid>
     </Grid>
 </Window>
