--- a/Dartin/Dartin.Application/Views/ScoreboardView.xaml
+++ b/Dartin/Dartin.Application/Views/ScoreboardView.xaml
@@ -47,7 +47,29 @@
             </Grid>
             <Label Grid.Row="1" Grid.Column="2" Content="{Binding Player2.Name}" HorizontalAlignment="Right" Padding="12" FontSize="16"></Label>
 
-            <custom:ScrollingListView Grid.Row="2" Grid.ColumnSpan="3" ItemsSource="{Binding Logs}" HorizontalAlignment="Center"></custom:ScrollingListView>
+            <ListView ItemsSource="{Binding Player1Turns}" Grid.Row="2" Grid.Column="0" HorizontalAlignment="Center" MinWidth="320">
+                <ListView.View>
+                    <GridView AllowsColumnReorder="False">
+                        <GridViewColumn Header="1" Width="64" DisplayMemberBinding="{Binding Tosses[0].TotalScore}"></GridViewColumn>
+                        <GridViewColumn Header="2" Width="64" DisplayMemberBinding="{Binding Tosses[1].TotalScore}"></GridViewColumn>
+                        <GridViewColumn Header="3" Width="64" DisplayMemberBinding="{Binding Tosses[2].TotalScore}"></GridViewColumn>
+                        <GridViewColumn Header="Total" Width="64" DisplayMemberBinding="{Binding Score}"></GridViewColumn>
+                        <GridViewColumn Header="Remainder" Width="64" DisplayMemberBinding="{Binding DataContext.Player1Remainder, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type ItemsControl}}}"></GridViewColumn>
+                    </GridView>
+                </ListView.View>
+            </ListView>
+
+            <ListView ItemsSource="{Binding Player2Turns}" Grid.Row="2" Grid.Column="2" HorizontalAlignment="Center" MinWidth="320">
+                <ListView.View>
+                    <GridView AllowsColumnReorder="False">
+                        <GridViewColumn Header="1" Width="64" DisplayMemberBinding="{Binding Tosses[0].TotalScore}"></GridViewColumn>
+                        <GridViewColumn Header="2" Width="64" DisplayMemberBinding="{Binding Tosses[1].TotalScore}"></GridViewColumn>
+                        <GridViewColumn Header="3" Width="64" DisplayMemberBinding="{Binding Tosses[2].TotalScore}"></GridViewColumn>
+                        <GridViewColumn Header="Total" Width="64" DisplayMemberBinding="{Binding Score}"></GridViewColumn>
+                        <GridViewColumn Header="Remainder" Width="64" DisplayMemberBinding="{Binding DataContext.Player2Remainder, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type ItemsControl}}}"></GridViewColumn>
+                    </GridView>
+                </ListView.View>
+            </ListView>
 
             <Button Grid.Row="3" Grid.Column="0" x:Name="Back" Content="Back" Padding="12" Margin="0"></Button>
             <TextBox Grid.Row="3" Grid.Column="1" Text="{Binding Input}" HorizontalAlignment="Center" Padding="0,12,0,12" Margin="0" Width="128" MaxLength="3" FontSize="20" TextAlignment="Center" cal:Message.Attach="[Event KeyDown] = [Action Submit($eventArgs)]"> </TextBox>
