--- a/Dartin/Dartin.Application/Views/ScoreboardView.xaml
+++ b/Dartin/Dartin.Application/Views/ScoreboardView.xaml
@@ -62,17 +62,33 @@
             <ListView ItemsSource="{Binding Player2Turns}" Grid.Row="2" Grid.Column="2" HorizontalAlignment="Center" MinWidth="320">
                 <ListView.View>
                     <GridView AllowsColumnReorder="False">
-                        <GridViewColumn Header="1" Width="64" DisplayMemberBinding="{Binding Tosses[0].TotalScore}"></GridViewColumn>
-                        <GridViewColumn Header="2" Width="64" DisplayMemberBinding="{Binding Tosses[1].TotalScore}"></GridViewColumn>
-                        <GridViewColumn Header="3" Width="64" DisplayMemberBinding="{Binding Tosses[2].TotalScore}"></GridViewColumn>
-                        <GridViewColumn Header="Total" Width="64" DisplayMemberBinding="{Binding Score}"></GridViewColumn>
                         <GridViewColumn Header="Remainder" Width="64" DisplayMemberBinding="{Binding DataContext.Player2Remainder, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type ItemsControl}}}"></GridViewColumn>
+                        <GridViewColumn Header="Total" Width="64" DisplayMemberBinding="{Binding Score}"></GridViewColumn>
+                        <GridViewColumn Header="3" Width="64" DisplayMemberBinding="{Binding Tosses[2].TotalScore}"></GridViewColumn>
+                        <GridViewColumn Header="2" Width="64" DisplayMemberBinding="{Binding Tosses[1].TotalScore}"></GridViewColumn>
+                        <GridViewColumn Header="1" Width="64" DisplayMemberBinding="{Binding Tosses[0].TotalScore}"></GridViewColumn>
                     </GridView>
                 </ListView.View>
             </ListView>
 
             <Button Grid.Row="3" Grid.Column="0" x:Name="Back" Content="Back" Padding="12" Margin="0"></Button>
-            <TextBox Grid.Row="3" Grid.Column="1" Text="{Binding Input}" HorizontalAlignment="Center" Padding="0,12,0,12" Margin="0" Width="128" MaxLength="3" FontSize="20" TextAlignment="Center" cal:Message.Attach="[Event KeyDown] = [Action Submit($eventArgs)]"> </TextBox>
+            
+            <Grid Grid.Row="3" Grid.Column="1">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"></ColumnDefinition>
+                    <ColumnDefinition Width="Auto"></ColumnDefinition>
+                    <ColumnDefinition Width="*"></ColumnDefinition>
+                </Grid.ColumnDefinitions>
+
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"></RowDefinition>
+                </Grid.RowDefinitions>
+
+                <TextBox Grid.Row="0" Grid.Column="0" Text="{Binding TossOneInput}" HorizontalAlignment="Center" Padding="0,12,0,12" Margin="0" Width="40" MaxLength="3" FontSize="20" TextAlignment="Center" cal:Message.Attach="[Event KeyDown] = [Action Submit($eventArgs)]"></TextBox>
+                <TextBox Grid.Row="0" Grid.Column="1" Text="{Binding TossTwoInput}" HorizontalAlignment="Center" Padding="0,12,0,12" Margin="0" Width="40" MaxLength="3" FontSize="20" TextAlignment="Center" cal:Message.Attach="[Event KeyDown] = [Action Submit($eventArgs)]"></TextBox>
+                <TextBox Grid.Row="0" Grid.Column="2" Text="{Binding TossThreeInput}" HorizontalAlignment="Center" Padding="0,12,0,12" Margin="0" Width="40" MaxLength="3" FontSize="20" TextAlignment="Center" cal:Message.Attach="[Event KeyDown] = [Action Submit($eventArgs)]"></TextBox>
+            </Grid>
+
             <Button Grid.Row="3" Grid.Column="2" x:Name="Submit" Content="Submit" Padding="12" Margin="0"></Button>
         </Grid>
     </Border>
