Fix enter key + binding conflict

--- a/Dartin/Dartin.Application/Views/ScoreboardView.xaml
+++ b/Dartin/Dartin.Application/Views/ScoreboardView.xaml
@@ -130,9 +130,9 @@
                     <RowDefinition Height="Auto"></RowDefinition>
                 </Grid.RowDefinitions>
 
-                <TextBox Grid.Row="0" Grid.Column="0" Text="{Binding TossOneInput}" HorizontalAlignment="Center" Padding="0,12,0,12" Margin="0" Width="40" MaxLength="3" FontSize="20" TextAlignment="Center" cal:Message.Attach="[Event KeyDown] = [Action Submit($eventArgs)]"></TextBox>
-                <TextBox Grid.Row="0" Grid.Column="1" Text="{Binding TossTwoInput}" HorizontalAlignment="Center" Padding="0,12,0,12" Margin="0" Width="40" MaxLength="3" FontSize="20" TextAlignment="Center" cal:Message.Attach="[Event KeyDown] = [Action Submit($eventArgs)]"></TextBox>
-                <TextBox Grid.Row="0" Grid.Column="2" Text="{Binding TossThreeInput}" HorizontalAlignment="Center" Padding="0,12,0,12" Margin="0" Width="40" MaxLength="3" FontSize="20" TextAlignment="Center" cal:Message.Attach="[Event KeyDown] = [Action Submit($eventArgs)]"></TextBox>
+                <TextBox Grid.Row="0" Grid.Column="0" Text="{Binding TossOneInput, UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Center" Padding="0,12,0,12" Margin="0" Width="40" MaxLength="3" FontSize="20" TextAlignment="Center" cal:Message.Attach="[Event KeyDown] = [Action Submit($eventArgs)]"></TextBox>
+                <TextBox Grid.Row="0" Grid.Column="1" Text="{Binding TossTwoInput, UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Center" Padding="0,12,0,12" Margin="0" Width="40" MaxLength="3" FontSize="20" TextAlignment="Center" cal:Message.Attach="[Event KeyDown] = [Action Submit($eventArgs)]"></TextBox>
+                <TextBox Grid.Row="0" Grid.Column="2" Text="{Binding TossThreeInput, UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Center" Padding="0,12,0,12" Margin="0" Width="40" MaxLength="3" FontSize="20" TextAlignment="Center" cal:Message.Attach="[Event KeyDown] = [Action Submit($eventArgs)]"></TextBox>
             </Grid>
 
             <Button Grid.Row="3" Grid.Column="2" x:Name="Submit" Content="Submit" Padding="12" Margin="0"></Button>
