Add RevertTurn method

--- a/Dartin/Dartin.Application/Views/ScoreboardView.xaml
+++ b/Dartin/Dartin.Application/Views/ScoreboardView.xaml
@@ -117,7 +117,7 @@
                 </Grid>
             </Border>
 
-            <Button Grid.Row="3" Grid.Column="0" x:Name="Back" Content="Back" Padding="12" Margin="0"></Button>
+            <Button Grid.Row="3" Grid.Column="0" x:Name="RevertTurn" Content="Back" Padding="12" Margin="0"></Button>
             
             <Grid Grid.Row="3" Grid.Column="1">
                 <Grid.ColumnDefinitions>
