--- a/Dartin/Dartin.Application/Views/MatchReportView.xaml
+++ b/Dartin/Dartin.Application/Views/MatchReportView.xaml
@@ -180,7 +180,7 @@
 
                     <TextBlock Grid.Row="0" Text="{Binding TotalLegsWonP1}" Foreground="White" HorizontalAlignment="Center" FontSize="14"></TextBlock>
                     <TextBlock Grid.Row="1" Text="{Binding TotalSetsWonP1}" Foreground="White" HorizontalAlignment="Center" FontSize="14"></TextBlock>
-                    <TextBlock Grid.Row="2" Text="tba" Foreground="White" HorizontalAlignment="Center" FontSize="14"></TextBlock>
+                    <TextBlock Grid.Row="2" Text="{Binding MatchAverageP1}" Foreground="White" HorizontalAlignment="Center" FontSize="14"></TextBlock>
                     <TextBlock Grid.Row="3" Text="tba" Foreground="White" HorizontalAlignment="Center" FontSize="14"></TextBlock>
                     <TextBlock Grid.Row="4" Text="tba" Foreground="White" HorizontalAlignment="Center" FontSize="14"></TextBlock>
                 </Grid>
@@ -211,7 +211,7 @@
 
                     <TextBlock Grid.Row="0" Text="{Binding TotalLegsWonP2}" Foreground="White" HorizontalAlignment="Center" FontSize="14"></TextBlock>
                     <TextBlock Grid.Row="1" Text="{Binding TotalSetsWonP2}" Foreground="White" HorizontalAlignment="Center" FontSize="14"></TextBlock>
-                    <TextBlock Grid.Row="2" Text="tba" Foreground="White" HorizontalAlignment="Center" FontSize="14"></TextBlock>
+                    <TextBlock Grid.Row="2" Text="{Binding MatchAverageP2}" Foreground="White" HorizontalAlignment="Center" FontSize="14"></TextBlock>
                     <TextBlock Grid.Row="3" Text="tba" Foreground="White" HorizontalAlignment="Center" FontSize="14"></TextBlock>
                     <TextBlock Grid.Row="4" Text="tba" Foreground="White" HorizontalAlignment="Center" FontSize="14"></TextBlock>
                 </Grid>
@@ -290,11 +290,11 @@
                     <TextBlock Grid.Row="0" Text="{Binding TotalDartsThrownP1}" Foreground="White" HorizontalAlignment="Center" FontSize="14"></TextBlock>
                     <TextBlock Grid.Row="1" Text="tba" Foreground="White" HorizontalAlignment="Center" FontSize="14"></TextBlock>
                     <TextBlock Grid.Row="2" Text="tba" Foreground="White" HorizontalAlignment="Center" FontSize="14"></TextBlock>
-                    <TextBlock Grid.Row="3" Text="tba" Foreground="White" HorizontalAlignment="Center" FontSize="14"></TextBlock>
+                    <TextBlock Grid.Row="3" Text="{Binding TotalScoreAboveHundredP1}" Foreground="White" HorizontalAlignment="Center" FontSize="14"></TextBlock>
                     <TextBlock Grid.Row="4" Text="tba" Foreground="White" HorizontalAlignment="Center" FontSize="14"></TextBlock>
                     <TextBlock Grid.Row="5" Text="tba" Foreground="White" HorizontalAlignment="Center" FontSize="14"></TextBlock>
                     <TextBlock Grid.Row="6" Text="tba" Foreground="White" HorizontalAlignment="Center" FontSize="14"></TextBlock>
-                    <TextBlock Grid.Row="7" Text="tba" Foreground="White" HorizontalAlignment="Center" FontSize="14"></TextBlock>
+                    <TextBlock Grid.Row="7" Text="{Binding TotalThreeDartersP1}" Foreground="White" HorizontalAlignment="Center" FontSize="14"></TextBlock>
                 </Grid>
                 <Grid Grid.Row="2" Grid.Column="1">
                     <Grid.RowDefinitions>
@@ -333,11 +333,11 @@
                     <TextBlock Grid.Row="0" Text="{Binding TotalDartsThrownP2}" Foreground="White" HorizontalAlignment="Center" FontSize="14"></TextBlock>
                     <TextBlock Grid.Row="1" Text="tba" Foreground="White" HorizontalAlignment="Center" FontSize="14"></TextBlock>
                     <TextBlock Grid.Row="2" Text="tba" Foreground="White" HorizontalAlignment="Center" FontSize="14"></TextBlock>
-                    <TextBlock Grid.Row="3" Text="tba" Foreground="White" HorizontalAlignment="Center" FontSize="14"></TextBlock>
+                    <TextBlock Grid.Row="3" Text="{Binding TotalScoreAboveHundredP2}" Foreground="White" HorizontalAlignment="Center" FontSize="14"></TextBlock>
                     <TextBlock Grid.Row="4" Text="tba" Foreground="White" HorizontalAlignment="Center" FontSize="14"></TextBlock>
                     <TextBlock Grid.Row="5" Text="tba" Foreground="White" HorizontalAlignment="Center" FontSize="14"></TextBlock>
                     <TextBlock Grid.Row="6" Text="tba" Foreground="White" HorizontalAlignment="Center" FontSize="14"></TextBlock>
-                    <TextBlock Grid.Row="7" Text="tba" Foreground="White" HorizontalAlignment="Center" FontSize="14"></TextBlock>
+                    <TextBlock Grid.Row="7" Text="{Binding TotalThreeDartersP2}" Foreground="White" HorizontalAlignment="Center" FontSize="14"></TextBlock>
                 </Grid>
             </Grid>
         </Grid>
